{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 261,
  "lineage": "435d27cc-cc64-2b25-9ea3-03e250f36169",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "backend_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "192.168.0.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-11-05T20:59:57.604-08:00",
            "id": "projects/race-tf/regions/asia-south2/addresses/my-internal-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "my-internal-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "race-tf",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/regions/asia-south2/addresses/my-internal-address",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/race-tf/regions/asia-south2/subnetworks/frontend-asia"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "frontend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/race-tf/zones/asia-south2-a/instanceGroups/frontend-us",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/race-tf/zones/us-central1-a/instanceGroups/frontend-asia",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-11-05T21:48:47.008-08:00",
            "enable_cdn": false,
            "fingerprint": "FuHEuxhd8Fs=",
            "generated_id": 2994638041590907088,
            "health_checks": [
              "projects/race-tf/global/httpHealthChecks/check-backend"
            ],
            "id": "projects/race-tf/global/backendServices/frontend-bs",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "frontend-bs",
            "port_name": "http",
            "project": "race-tf",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/global/backendServices/frontend-bs",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_address.backend_ip",
            "google_compute_http_health_check.frontend_health_check",
            "google_compute_instance_group_manager.frontend_asia",
            "google_compute_instance_group_manager.frontend_us",
            "google_compute_instance_template.frontend_template_asia",
            "google_compute_instance_template.frontend_template_us",
            "google_compute_network.network",
            "google_compute_subnetwork.subnet",
            "google_service_account.compute_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-05T20:29:41.527-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/race-tf/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/race-tf/global/networks/network-race",
            "priority": 1000,
            "project": "race-tf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "lb-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-05T20:29:44.204-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/race-tf/global/firewalls/fw-allow-health-check",
            "log_config": [],
            "name": "fw-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/race-tf/global/networks/network-race",
            "priority": 1000,
            "project": "race-tf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/global/firewalls/fw-allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "lb-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_allow_proxies",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-05T20:30:12.240-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/race-tf/global/firewalls/fw-allow-proxies",
            "log_config": [],
            "name": "fw-allow-proxies",
            "network": "https://www.googleapis.com/compute/v1/projects/race-tf/global/networks/network-race",
            "priority": 1000,
            "project": "race-tf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/global/firewalls/fw-allow-proxies",
            "source_ranges": [
              "192.168.3.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "lb-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network",
            "google_compute_subnetwork.proxy_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "google_compute_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": true,
            "allow_psc_global_access": false,
            "creation_timestamp": "2023-11-05T21:49:29.232-08:00",
            "id": "projects/race-tf/regions/asia-south2/forwardingRules/backend-fw",
            "ip_address": "192.168.0.3",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "backend-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/race-tf/global/networks/network-race",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "race-tf",
            "recreate_closed_psc": false,
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/regions/asia-south2/forwardingRules/backend-fw",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/race-tf/regions/asia-south2/subnetworks/frontend-asia",
            "target": "https://www.googleapis.com/compute/v1/projects/race-tf/regions/asia-south2/targetHttpProxies/proxy-backend"
          },
          "dependencies": [
            "google_compute_address.backend_ip",
            "google_compute_global_address.reserved_ip_range",
            "google_compute_instance_group_manager.backend_asia",
            "google_compute_instance_template.backend_template_asia",
            "google_compute_network.network",
            "google_compute_region_backend_service.backend_service",
            "google_compute_region_health_check.backend",
            "google_compute_region_target_http_proxy.proxy_backend",
            "google_compute_region_url_map.backend_url_map",
            "google_compute_subnetwork.proxy_subnet",
            "google_compute_subnetwork.subnet",
            "google_service_account.compute_sa",
            "google_service_networking_connection.private_access",
            "google_sql_database_instance.instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "reserved_ip_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.58.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-11-05T20:29:41.838-08:00",
            "id": "projects/race-tf/global/addresses/sql-range",
            "name": "sql-range",
            "network": "https://www.googleapis.com/compute/v1/projects/race-tf/global/networks/network-race",
            "prefix_length": 16,
            "project": "race-tf",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/global/addresses/sql-range"
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/race-tf/global/forwardingRules/frontend-fw",
            "ip_address": "34.160.57.229",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "frontend-fw",
            "port_range": "80-80",
            "project": "race-tf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/global/forwardingRules/frontend-fw",
            "target": "https://www.googleapis.com/compute/v1/projects/race-tf/global/targetHttpProxies/frontend-fw"
          },
          "dependencies": [
            "google_compute_address.backend_ip",
            "google_compute_backend_service.frontend_service",
            "google_compute_http_health_check.frontend_health_check",
            "google_compute_instance_group_manager.frontend_asia",
            "google_compute_instance_group_manager.frontend_us",
            "google_compute_instance_template.frontend_template_asia",
            "google_compute_instance_template.frontend_template_us",
            "google_compute_network.network",
            "google_compute_subnetwork.subnet",
            "google_compute_target_http_proxy.proxy_frontend",
            "google_compute_url_map.frontend_url_map",
            "google_service_account.compute_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/race-tf/global/networks/network-race",
            "mtu": 0,
            "name": "network-race",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "race-tf",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/global/networks/network-race"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/race-tf/zones/asia-south2-a/instanceGroups/backend-asia",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2023-11-05T21:48:40.801-08:00",
            "enable_cdn": false,
            "fingerprint": "ZOdF4ivoOBw=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/race-tf/regions/asia-south2/healthChecks/health-check-backend"
            ],
            "id": "projects/race-tf/regions/asia-south2/backendServices/backend-bs",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "backend-bs",
            "port_name": "http",
            "project": "race-tf",
            "protocol": "HTTP",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/regions/asia-south2/backendServices/backend-bs",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_global_address.reserved_ip_range",
            "google_compute_instance_group_manager.backend_asia",
            "google_compute_instance_template.backend_template_asia",
            "google_compute_network.network",
            "google_compute_region_health_check.backend",
            "google_compute_subnetwork.subnet",
            "google_service_account.compute_sa",
            "google_service_networking_connection.private_access",
            "google_sql_database_instance.instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "backend_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-05T21:49:04.001-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/race-tf/regions/asia-south2/backendServices/backend-bs",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "hRSJHSAjmZM=",
            "host_rule": [],
            "id": "projects/race-tf/regions/asia-south2/urlMaps/backend-url-map",
            "map_id": 5030602309699485856,
            "name": "backend-url-map",
            "path_matcher": [],
            "project": "race-tf",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/regions/asia-south2/urlMaps/backend-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_global_address.reserved_ip_range",
            "google_compute_instance_group_manager.backend_asia",
            "google_compute_instance_template.backend_template_asia",
            "google_compute_network.network",
            "google_compute_region_backend_service.backend_service",
            "google_compute_region_health_check.backend",
            "google_compute_subnetwork.subnet",
            "google_service_account.compute_sa",
            "google_service_networking_connection.private_access",
            "google_sql_database_instance.instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router-asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-11-05T20:29:36.718-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/race-tf/regions/asia-south2/routers/router-asia",
            "name": "router-asia",
            "network": "https://www.googleapis.com/compute/v1/projects/race-tf/global/networks/network-race",
            "project": "race-tf",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/regions/asia-south2/routers/router-asia"
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-11-05T20:29:38.963-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/race-tf/regions/us-central1/routers/router-us",
            "name": "router-us",
            "network": "https://www.googleapis.com/compute/v1/projects/race-tf/global/networks/network-race",
            "project": "race-tf",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/regions/us-central1/routers/router-us"
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "race-tf/asia-south2/router-asia/router-nat-asia",
            "log_config": [
              {
                "enable": true,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "router-nat-asia",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "race-tf",
            "region": "asia-south2",
            "router": "router-asia",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_PRIMARY_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_router.router-asia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "race-tf/us-central1/router-us/router-nat-us",
            "log_config": [
              {
                "enable": true,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "router-nat-us",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "race-tf",
            "region": "us-central1",
            "router": "router-us",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_PRIMARY_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_router.router-us"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-05T20:29:39.389-08:00",
            "gateway_address": "192.168.3.1",
            "id": "projects/race-tf/regions/asia-south2/subnetworks/proxy-lb-asia",
            "ip_cidr_range": "192.168.3.0/24",
            "name": "proxy-lb-asia",
            "network": "https://www.googleapis.com/compute/v1/projects/race-tf/global/networks/network-race",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "race-tf",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "asia-south2",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/regions/asia-south2/subnetworks/proxy-lb-asia"
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "backend-asia",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-05T20:29:39.992-08:00",
            "gateway_address": "192.168.2.1",
            "id": "projects/race-tf/regions/asia-south2/subnetworks/backend-asia",
            "ip_cidr_range": "192.168.2.0/24",
            "name": "backend-asia",
            "network": "https://www.googleapis.com/compute/v1/projects/race-tf/global/networks/network-race",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "race-tf",
            "purpose": "PRIVATE",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/regions/asia-south2/subnetworks/backend-asia",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        },
        {
          "index_key": "frontend-asia",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-05T20:29:39.888-08:00",
            "gateway_address": "192.168.0.1",
            "id": "projects/race-tf/regions/asia-south2/subnetworks/frontend-asia",
            "ip_cidr_range": "192.168.0.0/24",
            "name": "frontend-asia",
            "network": "https://www.googleapis.com/compute/v1/projects/race-tf/global/networks/network-race",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "race-tf",
            "purpose": "PRIVATE",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/regions/asia-south2/subnetworks/frontend-asia",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        },
        {
          "index_key": "frontend-us",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-05T20:29:38.092-08:00",
            "gateway_address": "192.168.1.1",
            "id": "projects/race-tf/regions/us-central1/subnetworks/frontend-us",
            "ip_cidr_range": "192.168.1.0/24",
            "name": "frontend-us",
            "network": "https://www.googleapis.com/compute/v1/projects/race-tf/global/networks/network-race",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "race-tf",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/regions/us-central1/subnetworks/frontend-us",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "proxy_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-05T21:49:43.564-08:00",
            "description": "a description",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/race-tf/global/targetHttpProxies/frontend-fw",
            "name": "frontend-fw",
            "project": "race-tf",
            "proxy_bind": false,
            "proxy_id": 7480764165748277400,
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/global/targetHttpProxies/frontend-fw",
            "url_map": "https://www.googleapis.com/compute/v1/projects/race-tf/global/urlMaps/frontend-url-map"
          },
          "dependencies": [
            "google_compute_address.backend_ip",
            "google_compute_backend_service.frontend_service",
            "google_compute_http_health_check.frontend_health_check",
            "google_compute_instance_group_manager.frontend_asia",
            "google_compute_instance_group_manager.frontend_us",
            "google_compute_instance_template.frontend_template_asia",
            "google_compute_instance_template.frontend_template_us",
            "google_compute_network.network",
            "google_compute_subnetwork.subnet",
            "google_compute_url_map.frontend_url_map",
            "google_service_account.compute_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "frontend_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-05T21:49:31.609-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/race-tf/global/backendServices/frontend-bs",
            "default_url_redirect": [],
            "description": "a description",
            "fingerprint": "wRQ6wQV0Dgc=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/race-tf/global/urlMaps/frontend-url-map",
            "map_id": 113440895577473157,
            "name": "frontend-url-map",
            "path_matcher": [],
            "project": "race-tf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/race-tf/global/urlMaps/frontend-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_address.backend_ip",
            "google_compute_backend_service.frontend_service",
            "google_compute_http_health_check.frontend_health_check",
            "google_compute_instance_group_manager.frontend_asia",
            "google_compute_instance_group_manager.frontend_us",
            "google_compute_instance_template.frontend_template_asia",
            "google_compute_instance_template.frontend_template_us",
            "google_compute_network.network",
            "google_compute_subnetwork.subnet",
            "google_service_account.compute_sa"
          ]
        }
      ]
    }
  ]
}